--- a/src/coreclr/src/vm/CMakeLists.txt
+++ b/src/coreclr/src/vm/CMakeLists.txt
@@ -542,7 +542,8 @@ set(GC_SOURCES_WKS
     ../gc/gceewks.cpp
     ../gc/gcload.cpp
     ../gc/softwarewritewatch.cpp
-    ../gc/handletablecache.cpp)
+    ../gc/handletablecache.cpp
+    ../gc/satori/SatoriGCHeap.cpp)
 
 set(GC_HEADERS_WKS
     ${GC_HEADERS_DAC_AND_WKS_COMMON}
@@ -550,7 +551,8 @@ set(GC_HEADERS_WKS
     ../gc/gcconfig.h
     ../gc/gcscan.h
     ../gc/gchandletableimpl.h
-    ../gc/softwarewritewatch.h)
+    ../gc/softwarewritewatch.h
+    ../gc/satori/SatoriGCHeap.h)
 
 if(FEATURE_EVENT_TRACE)
     list(APPEND VM_SOURCES_WKS
