--- a/src/coreclr/src/gc/CMakeLists.txt
+++ b/src/coreclr/src/gc/CMakeLists.txt
@@ -24,7 +24,9 @@ set( GC_SOURCES
   gceesvr.cpp
   gceewks.cpp
   gcload.cpp
-  handletablecache.cpp)
+  handletablecache.cpp
+  satori/SatoriGCHeap.cpp
+)
 
 if(CLR_CMAKE_HOST_UNIX)
   include(unix/configure.cmake)
@@ -74,7 +76,9 @@ if (CLR_CMAKE_TARGET_WIN32)
     handletable.inl
     handletablepriv.h
     objecthandle.h
-    softwarewritewatch.h)
+    softwarewritewatch.h
+    satori/SatoriGCHeap.h
+  )
 endif(CLR_CMAKE_TARGET_WIN32)
 
 if(CLR_CMAKE_HOST_WIN32)
