SatoriObject + some cleanup

--- a/src/coreclr/src/gc/CMakeLists.txt
+++ b/src/coreclr/src/gc/CMakeLists.txt
@@ -29,6 +29,7 @@ set( GC_SOURCES
   satori/SatoriHeap.cpp
   satori/SatoriPage.cpp
   satori/SatoriRegion.cpp
+  satori/SatoriObject.cpp
   satori/SatoriRegionQueue.cpp
   satori/SatoriAllocator.cpp
   satori/SatoriRecycler.cpp
@@ -90,6 +91,8 @@ if (CLR_CMAKE_TARGET_WIN32)
     satori/SatoriHeap.h
     satori/SatoriPage.h
     satori/SatoriRegion.h
+    satori/SatoriObject.h
+    satori/SatoriObject.inl
     satori/SatoriRegionQueue.h
     satori/SatoriAllocator.h
     satori/SatoriRecycler.h
