SatoriObject + some cleanup

--- a/src/coreclr/src/gc/CMakeLists.txt
+++ b/src/coreclr/src/gc/CMakeLists.txt
@@ -25,10 +25,11 @@ set( GC_SOURCES
   gceewks.cpp
   gcload.cpp
   handletablecache.cpp
-  satori/SatoriGCHeap.cpp
+  satori/SatoriGC.cpp
   satori/SatoriHeap.cpp
   satori/SatoriPage.cpp
   satori/SatoriRegion.cpp
+  satori/SatoriObject.cpp
   satori/SatoriRegionQueue.cpp
   satori/SatoriAllocator.cpp
   satori/SatoriRecycler.cpp
@@ -86,10 +87,12 @@ if (CLR_CMAKE_TARGET_WIN32)
     handletablepriv.h
     objecthandle.h
     softwarewritewatch.h
-    satori/SatoriGCHeap.h
+    satori/SatoriGC.h
     satori/SatoriHeap.h
     satori/SatoriPage.h
     satori/SatoriRegion.h
+    satori/SatoriObject.h
+    satori/SatoriObject.inl
     satori/SatoriRegionQueue.h
     satori/SatoriAllocator.h
     satori/SatoriRecycler.h
