--- a/src/tests/issues.targets
+++ b/src/tests/issues.targets
@@ -87,8 +87,14 @@
       </ExcludeList>
       <ExcludeList Include="$(XunitTestBinBase)/GC/API/GC/GetGCMemoryInfo/*">
         <Issue>Satori GC apis</Issue>
-      </ExcludeList>
+      </ExcludeList>      
       <ExcludeList Include="$(XunitTestBinBase)/GC/API/GC/Collect_Aggressive/*">
+        <Issue>Satori GC apis</Issue>
+      </ExcludeList>
+      <ExcludeList Include="$(XunitTestBinBase)/GC/API/GC/Collect_Aggressive_MultipleParameters/*">
+        <Issue>Satori GC apis</Issue>
+      </ExcludeList>
+      <ExcludeList Include="$(XunitTestBinBase)/GC/API/NoGCRegion/**">
         <Issue>Satori GC apis</Issue>
       </ExcludeList>
 
@@ -104,6 +110,9 @@
         <Issue>Satori profiler tracing</Issue>
       </ExcludeList>
       <ExcludeList Include="$(XunitTestBinBase)/profiler/gc/gcbasic/*">
+        <Issue>Satori profiler tracing</Issue>
+      </ExcludeList>
+      <ExcludeList Include="$(XunitTestBinBase)/profiler/gc/nongcheap/*">
         <Issue>Satori profiler tracing</Issue>
       </ExcludeList>
       <ExcludeList Include="$(XunitTestBinBase)/profiler/gc/gc/*">
